Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -99,6 +99,7 @@ header {
   overflow-x: auto;
   overflow-y: hidden;
   padding: 15px 0px;
+  width: 25%;
 }
 
 .companyname a:hover {
@@ -240,7 +241,7 @@ footer p {
   float: right;
   position: relative;
   padding-top: 22px;
-  max-width: 690px;
+  width: 75%;
 }
 
 .widget.extendednavigation a.pull {
@@ -252,7 +253,6 @@ footer p {
 }
 
 .widget.extendednavigation ul {
-  float: left;
   padding: 0;
   margin: 0;
 }
